init node project

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,4 @@
-# ---- Terraform ----
-*.tfstate
-*.tfstate.*
-crash.log
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
-.terraform/
-.terraform.lock.hcl
-
-# ---- Python ----
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Virtual environments
-.venv/
-
-# Distribution / packaging
-build/
-dist/
-*.egg-info/
-.eggs/
-
-# PyInstaller
-*.spec
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-.pytest_cache/
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-
-# Jupyter
-.ipynb_checkpoints
-
-# IDEs / editors
-.vscode/
-.idea/
-*.swp
-
-# ---- General ----
-.DS_Store
+node_modules
+dist
+cdk.out
+.env
