--- a/package.json
+++ b/package.json
@@ -14,24 +14,26 @@
     "lint": "eslint . --ext .ts"
   },
   "devDependencies": {
-    "aws-cdk": "^2.154.0",
+    "@types/aws-lambda": "^8.10.152",
     "@types/node": "^20.14.11",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
+    "aws-cdk": "^2.154.0",
+    "aws-sdk-client-mock": "^3.1.0",
+    "esbuild": "^0.23.1",
     "eslint": "^8.57.0",
+    "nock": "^13.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
-    "vitest": "^2.0.5",
-    "aws-sdk-client-mock": "^3.1.0",
-    "nock": "^13.5.0",
-    "esbuild": "^0.23.1"
+    "vitest": "^2.0.5"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.645.0",
+    "@aws-sdk/client-s3": "^3.888.0",
+    "@aws-sdk/client-ssm": "^3.645.0",
+    "@aws-sdk/lib-dynamodb": "^3.645.0",
     "aws-cdk-lib": "^2.154.0",
     "constructs": "^10.3.0",
-    "@aws-sdk/client-dynamodb": "^3.645.0",
-    "@aws-sdk/lib-dynamodb": "^3.645.0",
-    "@aws-sdk/client-ssm": "^3.645.0",
     "p-map": "^6.0.0",
     "rss-parser": "^3.13.0",
     "undici": "^6.19.8"
