--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vitest": "^2.0.5"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.888.0",
     "@aws-sdk/client-dynamodb": "^3.645.0",
     "@aws-sdk/client-s3": "^3.888.0",
     "@aws-sdk/client-ssm": "^3.645.0",
